--- a/_layouts/example.html
+++ b/_layouts/example.html
@@ -36,7 +36,7 @@
 
       <div class="container">
         <div id="docs" name="docs"></div>
-        <div class="markdown-body" style="margin: 40px 0;" v-pre>
+        <div class="markdown-body" style="margin: 40px 0;">
           {{ content }}
         </div>
       </div>
