--- a/website/includes/components.html
+++ b/website/includes/components.html
@@ -1,6 +1,3 @@
-  <script type="text/javascript" id="demo-basic-script">
-    window.components = {};
-  </script>
   <script type="text/x-template" id="demo-basic-template">
     {% include_relative website/demo/basic.html %}
   </script>
@@ -8,8 +5,10 @@
     (function(){
       {% include_relative website/demo/basic.js %}
       component.template = '#demo-basic-template';
-      // Vue.component('demo-basic', component);
-      components['demo-basic'] = component;
+      var vm = new Vue({
+        el: '#demo-basic-mount',
+        components: {'demo-basic': component},
+      });
     })();
   </script>
 
@@ -20,16 +19,9 @@
     (function(){
       {% include_relative website/demo/advanced.js %}
       component.template = '#demo-advanced-template';
-      components['demo-advanced'] = component;
-      // Vue.component('demo-advanced', component);
+      var vm = new Vue({
+        el: '#demo-advanced-mount',
+        components: {'demo-advanced': component},
+      });
     })();
-  </script>
-
-  <script type="text/javascript">
-    // Vue.component
-
-    var vm = new Vue({
-      el: '#app',
-      components: components,
-    });
   </script>
