--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -10,7 +10,7 @@ layout: default
           <div class="masthead-brand">              
             <h3>
               <a href="{{ "/" | prepend: site.baseurl }}">
-                Vue File Agent
+                🖼 Vue File Agent
               </a>
             </h3>
             <div class="text-mutedx" style="color: #ACB5BD">
