--- a/_layouts/example.html
+++ b/_layouts/example.html
@@ -11,8 +11,8 @@
 
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://safrazik.github.io/vue-file-agent/assets/github-markdown.css">
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-file-agent@latest/dist/vue-file-agent.css">
+    <link rel="stylesheet" href="https://safrazik.github.io/vue-file-agent/website/assets/github-markdown.css">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-file-agent/dist/vue-file-agent.css">
   </head>
   <body>
     <div id="app">
@@ -20,7 +20,7 @@
         <div>              
           <h3>
             <a href="{{ "/" | prepend: site.baseurl }}">
-              Vue File Agent
+              🖼 Vue File Agent
             </a>
           </h3>
           <div style="color: #ACB5BD">
@@ -41,7 +41,10 @@
         </div>
       </div>
       <div class="container">
-        <demo-advanced></demo-advanced>
+        <div id="demo-basic-mount"></div>
+        <div id="demo-advanced-mount">
+          <demo-advanced></demo-advanced>
+        </div>
       </div> 
       <div class="bg-secondary text-white mt-5 py-3">
         <div class="container">
@@ -54,7 +57,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.auto.js" integrity="sha256-qq7wfY6gQJldAy+TGLT7UF/TqnfV4XFzGF/RzrVXq24=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue-file-agent@latest/dist/vue-file-agent.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-file-agent/dist/vue-file-agent.umd.js"></script>
 
     {% include_relative website/includes/components.html %}
 
