--- a/_layouts/example.html
+++ b/_layouts/example.html
@@ -20,7 +20,7 @@
         <div>              
           <h3>
             <a href="{{ "/" | prepend: site.baseurl }}">
-              🖼 Vue File Agent
+              Vue File Agent
             </a>
           </h3>
           <div style="color: #ACB5BD">
