Add Advanced Demo link

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -48,8 +48,8 @@ layout: default
            <!-- by <a href="https://twitter.com/safrazik">@safrazik</a>.</p> -->
            Scroll down for 
            <a href="#docs">Docs</a>
-<!--            &middot;
-           <a href="#advanced-demo">Advanced Demo</a> -->
+           &amp;
+           <a href="#advanced-demo">Advanced Demo</a>
         </p>
            <!-- by <a href="https://twitter.com/safrazik">@safrazik</a>.</p> -->
         </div>
