--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -68,12 +68,13 @@ layout: default
     <div id="demo-advanced-mount">
       <demo-advanced></demo-advanced>
     </div>
+    <h2 class="mt-5 mb-2">Activity on
+      <a href="https://github.com/safrazik/vue-file-agent">Github</a>
+    </h2>
+    <div class="text-muted mb-3">Thank you for your interest and contributions</div>
 
-    {% comment %}
-    <h2 class="mt-5 mb-3">Activity Feed</h2>
 
     {% include_relative website/includes/activity-feed.html %}
-    {% endcomment %}
 
 <!--         <div class="mb-5">
     </div> -->
