--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,18 +14,50 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
 
+    {% if layout.external_urls %}
+    <link rel="stylesheet" href="https://safrazik.github.io/vue-file-agent/website/assets/styles.css">
+    <link rel="stylesheet" href="https://safrazik.github.io/vue-file-agent/website/assets/github-markdown.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vue-file-agent/dist/vue-file-agent.css">
+    {% else %}
     <link rel="stylesheet" href="{{ "/website/assets/styles.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/website/assets/github-markdown.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/vue-file-agent.css" | prepend: site.dist_baseurl }}">
+    {% endif %}
 
-  </head>
-  <body class="w-100 h-100">
+{% capture site_base_url %}{% if layout.external_urls %}http://safrazik.github.io/vue-file-agent{% else %}{{ site.baseurl }}{% endif %}{% endcapture %}
 
+</head>
+<body class="w-100 h-100" style="padding-top: 3.5rem;">
+
+<nav class="navbar navbar-expand fixed-top navbar-dark bg-dark px-0" style="background: rgba(52, 58, 64, 0.95) !important; height: 3.5rem;">
+  <div class="container" style="padding-left: 15px;
+    padding-right: 15px;">
+    <a class="navbar-brand" href="{{ "/" | prepend: site_base_url }}">Vue File Agent</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="{{ "/api/" | prepend: site_base_url }}">API</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/safrazik/vue-file-agent">GitHub</a>
+        </li>
+      </ul>
+    </div>
+    <!-- <small class="navbar-text">Every file deserves to be treated equally</small> -->
+  </div>
+</nav>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.auto.js" integrity="sha256-qq7wfY6gQJldAy+TGLT7UF/TqnfV4XFzGF/RzrVXq24=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  {% if layout.external_urls %}
+  <script src="https://cdn.jsdelivr.net/npm/vue-file-agent/dist/vue-file-agent.umd.js"></script>
+  {% else %}
   <script src='{{ "/vue-file-agent.umd.js" | prepend: site.dist_baseurl }}'></script>
-
+  {% endif %}
   {{ content }}
 
 </body>
