--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -494,3 +494,8 @@
   background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="16" height="16" viewBox="0 0 16 16"><rect x="0" y="0" width="100%" height="100%" fill="rgba(255, 255, 255, 0.1)" /><rect x="50%" y="0" width="50%" height="50%" fill="rgba(0, 0, 0, 0.075)" /><rect x="0" y="50%" width="50%" height="50%" fill="rgba(0, 0, 0, 0.075)" /></svg>');
   background-repeat: repeat;
 }
+
+.is-disabled .vue-file-agent {
+  opacity: 0.65;
+  pointer-events: none;
+}
