Fix #10 Add file-preview slots

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/api/" | prepend: site_base_url }}">API</a>
+          <a class="nav-link" href="{{ "/docs/" | prepend: site_base_url }}">Docs</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/safrazik/vue-file-agent">GitHub</a>
