--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,10 +41,12 @@ layout: default
         <p class="lead-old">
           <!-- <a href="#" class="btn btn-lg btn-secondary">Get Started</a> -->
            <!-- by <a href="https://twitter.com/safrazik">@safrazik</a>.</p> -->
-           Scroll down for 
-           <a href="#docs">Docs</a>
-           &amp;
-           <a href="#advanced-demo">Advanced Demo</a>
+
+           <!-- <a href="https://github.com/safrazik/vue-file-agent" class="btn btn-outline-secondary btn-sm">Github</a> -->
+           <a href="#features" class="btn btn-outline-secondary btn-sm">Features</a>
+           <a href="#installation" class="btn btn-outline-secondary btn-sm">Installation</a>
+           <a href="#advanced-demo" class="btn btn-outline-secondary btn-sm">Advanced Demo</a>
+           <a href="{{ "/docs/" | prepend: site.baseurl }}" class="btn btn-outline-secondary btn-sm">Docs & Examples</a>
         </p>
            <!-- by <a href="https://twitter.com/safrazik">@safrazik</a>.</p> -->
         </div>
