Fix #5 add file rename feature

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -128,8 +128,7 @@
   top: 0;
   padding: 5px 5px 0 5px;
   font-size: 20px;
-  background: #e553537d;
-  background: rgba(229, 83, 83, 0.5);
+  background: transparent;
   line-height: 24px;
   height: 28px;
   width: 28px;
