--- a/src/scss/_theme-list.scss
+++ b/src/scss/_theme-list.scss
@@ -99,7 +99,8 @@
 /*  bottom: 0;
   height: 100%;
   line-height: 53px;*/
-  color: #e55353;
+  // color: #e55353;
+  color: inherit;
   background: transparent;
 }
 
