Fix minor style issue

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,10 +43,10 @@ layout: default
            <!-- by <a href="https://twitter.com/safrazik">@safrazik</a>.</p> -->
 
            <!-- <a href="https://github.com/safrazik/vue-file-agent" class="btn btn-outline-secondary btn-sm">Github</a> -->
-           <a href="#features" class="btn btn-outline-secondary btn-sm">Features</a>
-           <a href="#installation" class="btn btn-outline-secondary btn-sm">Installation</a>
-           <a href="#advanced-demo" class="btn btn-outline-secondary btn-sm">Advanced Demo</a>
-           <a href="{{ "/docs/" | prepend: site.baseurl }}" class="btn btn-outline-secondary btn-sm">Docs & Examples</a>
+           <a href="#features" class="btn btn-outline-secondary btn-sm mb-2">Features</a>
+           <a href="#installation" class="btn btn-outline-secondary btn-sm mb-2">Installation</a>
+           <a href="#advanced-demo" class="btn btn-outline-secondary btn-sm mb-2">Advanced Demo</a>
+           <a href="{{ "/docs/" | prepend: site.baseurl }}" class="btn btn-outline-secondary btn-sm mb-2">Docs & Examples</a>
         </p>
            <!-- by <a href="https://twitter.com/safrazik">@safrazik</a>.</p> -->
         </div>
