--- a/src/scss/_theme-list.scss
+++ b/src/scss/_theme-list.scss
@@ -99,8 +99,8 @@
 /*  bottom: 0;
   height: 100%;
   line-height: 53px;*/
-  // color: #e55353;
-  color: inherit;
+  color: #e55353;
+  color: #777;
   background: transparent;
 }
 
