Add social tags

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,23 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="{{ site.description }}">
     <meta name="author" content="Safraz Razik">
     <meta name="generator" content="Jekyll v3.8.6">
+
+
+    <meta name="twitter:image:src" content="https://safrazik.github.io/vue-file-agent/website/assets/cover.png" />
+    <meta name="twitter:site" content="@safrazik" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="{{ site.title }}" />
+    <meta name="twitter:description" content="{{ site.description }}" />
+
+    <meta property="og:image" content="https://safrazik.github.io/vue-file-agent/website/assets/cover.png" />
+    <meta property="og:site_name" content="GitHub" />
+    <meta property="og:type" content="object" />
+    <meta property="og:title" content="{{ site.title }}" />
+    <meta property="og:url" content="https://safrazik.github.io/vue-file-agent" />
+    <meta property="og:description" content="Full featured drag &amp; drop enabled Vue file upload component with previews and upload progress - safrazik/vue-file-agent" />
 
     <title>{{ site.title }}</title>
 
